# tally-bridge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TAURI_MIGRATION.md  TESTING-ON-WINDOWS.md  electron-builder.yml  package-lock.json  package.json  tsconfig.base.json
.claude/: proven-config.json  settings.json  settings.local.json
.github/workflows/: build-tauri-spike.yml  build-windows.yml
apps/bridge/: package.json
apps/bridge-tauri/: .gitignore  build.mjs  package.json
apps/bridge-tauri/src/: bridge-shim.ts  tally-detect.ts  tauri-entry.ts
apps/bridge-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/bridge-tauri/src-tauri/capabilities/: default.json
apps/bridge-tauri/src-tauri/src/: lib.rs  main.rs  store.rs
apps/bridge-tauri/test/: tally-detect.test.ts
apps/bridge/scripts/: build-assets.mjs  clean.mjs  rebuild-native-for-electron.mjs  visual-harness.mjs  visual-preload.cjs  visual-stub.cjs  visual-wizard-stub.cjs
apps/bridge/src/main/: cycle.ts  detect.ts  errors.ts  index.ts  ipc.ts  keystore.ts  reader.ts  scheduler.ts  session.ts  snapshots.ts  urls.ts  window.ts  wizard-effects.ts  wizard-host.ts
apps/bridge/src/onboarding/: pairing.ts  recovery.ts  vercel.ts  wizard.ts
apps/bridge/src/preload/: index.cts
apps/bridge/src/renderer/: cards.ts  charts.ts  dashboard.ts  dom.ts  i18n.ts  index.html  main.ts  snapshot.ts  (+3 more)
apps/bridge/test/: admission.test.ts  adversary-admission.test.ts  backend.adversary.test.ts  cycle.test.ts  dashboard.adversary.test.ts  dashboard.cards.test.ts  dashboard.dom.ts  dashboard.snapshot.test.ts  deploy-bundle.test.ts  detect.test.ts  hardening.test.ts  keystore.test.ts  pairing.test.ts  reader.test.ts  recovery.test.ts  scheduler.test.ts  session.test.ts  snapshots.test.ts  vercel.test.ts  window.test.ts  wizard-effects.test.ts  wizard-host.test.ts  wizard.adversary.test.ts  wizard.renderer.test.ts  wizard.test.ts
apps/server/: package.json
apps/server/src/: auth.ts  db.ts  entry.ts  ingest.ts  migrate.ts  read.ts  router.ts  schema.sql
apps/server/test/: adversarial.test.ts  auth.test.ts  db.test.ts  ingest.test.ts  migrate.test.ts  read.test.ts  router.test.ts
apps/web/: README.md  build.mjs  package.json  tsconfig.json  tsconfig.test.json
apps/web/scripts/: visual-harness.mjs  visual-stub.ts
apps/web/src/: worker-entry.ts  worker.ts
apps/web/test/: api.test.ts  assemble.test.ts  helpers.ts  marks.test.ts  read.test.ts  ui.test.ts  unlock.test.ts
apps/web/ui/: app.js  entry.ts  index.html  index.original.html  viewmap.ts
scripts/: build-deploy-bundle.ts  e2e-simulation.ts  prepare-packages.mjs  smoke-launch.md  spike-a-ageing.ts
scripts/deploy-bundle/: build.ts  smoke.cjs  sodium-probe.ts
(+7 files in other folders)
