[package]
name = "bridge-tauri"
version = "0.1.0"
description = "Tally Bridge (Tauri shell) — same dashboard UI, ~10x smaller than the Electron build."
authors = ["Tally Bridge"]
edition = "2021"

[lib]
name = "bridge_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Real I/O glue: the Tally HTTP round-trip. `rustls-tls` avoids a system OpenSSL dependency so the
# Windows build stays self-contained. Tally is plaintext localhost, but reqwest is also how the
# provisioner reaches Vercel later, which is https.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
# WHATWG URL parsing for the open_external allowlist — same IDNA/punycode + userinfo handling the
# TS `new URL()` gives, which is what makes the allowlist port faithful.
url = "2"
