[package]
name = "bridge-tauri"
version = "0.1.0"
description = "Tally Bridge (Tauri shell) — same dashboard UI, ~10x smaller than the Electron build."
authors = ["Tally Bridge"]
edition = "2021"

[lib]
name = "bridge_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Real I/O glue: the Tally HTTP round-trip. `rustls-tls` avoids a system OpenSSL dependency so the
# Windows build stays self-contained. Tally is plaintext localhost, but reqwest is also how the
# provisioner reaches Vercel later, which is https.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
# WHATWG URL parsing for the open_external allowlist — same IDNA/punycode + userinfo handling the
# TS `new URL()` gives, which is what makes the allowlist port faithful.
url = "2"
# Local sync store (M2). `bundled` compiles SQLite from source — no system libsqlite3 dependency,
# which keeps the self-contained Windows build self-contained.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# Test-only: async test runtime + a TCP fake-Tally server. `full` here does NOT bloat the release
# binary — dev-deps are compiled only for `cargo test`.
tokio = { version = "1", features = ["full"] }
